--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section>
+        <div class="half-width">
+            <h1><span class="orange-color">Skip</span> The Diet,
+                Just Eat Healthy
+                With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide
+                healthy and delicious food for you!</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/polok135">order food</a>
+        </div>
+        <div class="half-width">
+            <img src="female/Group 8425.png" alt="">
+        </div>
+    </section>
 
 </body>
 
