--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
             <img src="female/Group 8425.png" alt="">
         </div>
     </section>
+    <section class="about-me">
+        <div class="half-width">
+            <img src="female/Person Image.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>About Me</h2>
+            <p>My name is Susy Bando. You can Call Me a Food Lover but please do not call me a foodie. Your definition
+                of foodie may be different than mine but in my mind, a foodie is pretentious about their food
+                experiences and spends more time picking apart the pieces of a meal/dish rather than enjoying the
+                moment.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/polok135">contact me</a>
+        </div>
+    </section>
 
 </body>
 
