--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         </div>
     </section>
     <section class="about-me">
-        <div class="half-width">
+        <div class="half-width about">
             <img src="female/Person Image.png" alt="">
         </div>
-        <div class="half-width">
+        <div class="about-2 half-width">
             <h2>About Me</h2>
             <p>My name is Susy Bando. You can Call Me a Food Lover but please do not call me a foodie. Your definition
                 of foodie may be different than mine but in my mind, a foodie is pretentious about their food
