--- a/index.html
+++ b/index.html
@@ -39,6 +39,47 @@
             <a class="link-button" target="_blank" href="https://www.facebook.com/polok135">contact me</a>
         </div>
     </section>
+    <section class=" recipie section">
+        <div class="text">
+            <h2>My recipies</h2>
+            <small>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the
+                1500s.</small>
+        </div>
+        <div class="my-recipies">
+            <div class="food-recipie">
+                <div class="different-itm">
+                    <img src="food/Project Cover1.jpg" alt="">
+                    <h3>kabab</h3>
+                    <p>Shami kababs may be served with roti along with ketchup, hot sauce, Schezwan sauce,chilli garlic
+                        sauce,
+                        raita or chutney. Before serving the kebabs, it is also common to dip them in a beaten egg
+                        mixture
+                        and
+                        double fry them. They are also commonly eaten in Hyderabad with cooked rice or chapati.</p>
+                </div>
+                <div class="different-itm">
+                    <img src="food/Project Cover.png" alt="">
+                    <h3>Halim</h3>
+                    <p>A traditional haleem is made by firstly soaking wheat, barley and gram lentil overnight. A spicy
+                        meat
+                        gravy called Korma is prepared until the meat becomes tender. The wheat, barley and gram are
+                        boiled
+                        in
+                        salt water until they are tender. The cooked wheat, barley and lentils are then mixed with the
+                    </p>
+                </div>
+                <div class="different-itm">
+                    <img src="food/Project Cover5.png" alt="">
+                    <h3>Salad</h3>
+                    <p>Mainly composed of cooked pole beans (green beans and/or yellow wax beans), cooked chickpeas
+                        (garbanzo
+                        beans), cooked kidney beans and sliced or diced fresh beetroot. The beans are marinated in an
+                        oil/vinegar vinaigrette, sometimes sweetened with sugar.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
