--- a/index.html
+++ b/index.html
@@ -80,6 +80,31 @@
             </div>
         </div>
     </section>
+    <section class="countdown">
+        <div class="countdown-item">
+            <h2>700k</h2>
+            <p>Youtube Subscribers</p>
+
+
+        </div>
+        <div class="countdown-item">
+            <h2>2.4m</h2>
+            <p>Instagram Followers</p>
+
+
+        </div>
+        <div class="countdown-item">
+            <h2>100k</h2>
+            <p>Dribbble Shot Likes</p>
+
+
+        </div>
+    </section>
+    <footer class="footer-section">
+        <h2><span class="orange-color">Food</span> Network</h2>
+        <small>Eat healthy to live healthy. Live healthy to live happy.</small>
+    </footer>
+
 
 </body>
 
